--- a/main.css
+++ b/main.css
@@ -135,10 +135,22 @@ section.join{
     position: relative;
     top: -4px;
   }
-  form input{
+  form input:focus{
     border: 4px dashed #4B4B4B;
   }
   form input:valid{
     border: 4px solid #71d300;
   }
-   
+  article p::first-line{
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+  section.join p::first-letter{
+    font-size: 1.5em;
+  }
+  p::selection{
+    background-color: #f63232;
+  }
+  p::after{
+    content:'...'
+  } 
