--- a/main.css
+++ b/main.css
@@ -150,62 +150,48 @@ footer {
   padding: 10px;
   text-align: center;
 }
-
-.sign-up {
-  background-color: #773cc4;
-  padding: 10px 0;
-  text-align: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.form-containers {
-width: 680px;
-}
-.enryarea{
-  position: relative;
-  height: 80px;
-  line-height: 80px;
-}
- 
-.form-containers input {
-  display: block;
-  margin: 10px auto;
-  position: inherit;
-  padding: 10px;
-  border-radius: 10px;
-  border-color: #c0710b;
-  width: 40%;
-  line-height: 25px;
-border: 2px solid #f0ffff;
-background: transparent;
-transition: 0.1s ease;
-z-index: 1111;
-align-content: center;
-}
-.enryarea{
-  position: relative;
-  height: 80px;
-  line-height: 80px;
-}
-input{
-  position: absolute;
-  width: 100%;
-  outline: none;
-  font-size: 2.2em;
-  padding: 0.30px;
-  line-height: 80px;
-  border-radius: 10px;
-  border: 2px solid #f0ffff;
-  background: transparent;
-  transition: 0.1s ease;
+.login {
+  max-width: 100%;
+  height: 500px;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
   z-index: 1111;
-   
-  
+  overflow: hidden;
+  margin-top: 100px;
 }
+form {
+  border-radius: 20px;
+  display: block;
+  box-sizing: border-box;
+  padding: 40px;
+  width: 400px;
+  height: 100%;
+  backdrop-filter: brightness(40%);
+  flex-direction: column;
+  display: flex;
+  gap: 5px;
+  z-index: 1111;
+}
+input {
+  background: rgba(225,225,225,0.3);
+  height: 40px;
+  border-radius: 20px;
+  padding: 0px 20px;
+  border: none;
+  margin-bottom: 20px;
+  color: white;
+}
+button {
+  background: rgb(45, 126, 231);
+  height: 40px;
+  line-height: 40px;
+  border-radius: 40px;
+  margin: 10px 0px;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+  color: white;
+}
+   
 /* responsive styles */
 
 @media screen and (max-width: 1400px) {
@@ -285,8 +271,72 @@ input{
 
   header,
   nav {
-    position: relative;
+    position: absolute;
     top: 0;
   }
-
+  header {
+    header {
+      background-color: #F63232;
+      padding: 20px 0;
+      text-align: center;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    
+    header h1 {
+      color: white;
+      border: 8px solid white;
+      display: inline-block;
+      padding: 6px 12px;
+      border-radius: 36px;
+    }
+  }
+  .login {
+    max-width: 80%;
+    height: 450px;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
+    z-index: 1111;
+    overflow: hidden;
+    margin-top: 100px;
+  }
+  form {
+    border-radius: 20px;
+    display: block;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 400px;
+    height: 100%;
+    backdrop-filter: brightness(40%);
+    flex-direction: column;
+    display: flex;
+    gap: 5px;
+    z-index: 11140%1;
+    font-size: 15px;
+  }
+  input {
+    background: rgba(225,225,225,0.3);
+    height: 36px;
+    border-radius: 20px;
+    padding: 0px 10px;
+    border: none;
+    margin-bottom: 20px;
+    color: white;
+    align-self: left;
+    margin-right: 50px;
+  }
+  button {
+    background: rgb(45, 126, 231);
+    height: 40px;
+    line-height: 40px;
+    border-radius: 40px;
+    margin: 10px 0px;
+    margin-right: 50px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    color: white;
+  }
 }
