--- a/main.css
+++ b/main.css
@@ -340,3 +340,51 @@ button {
     color: white;
   }
 }
+@media screen and (max-width: 430px) {
+ 
+  .login {
+    max-width: 80%;
+    height: 450px;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
+    z-index: 1111;
+    overflow: hidden;
+    margin-top: 100px;
+  }
+  form {
+    border-radius: 20px;
+    display: block;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 400px;
+    height: 100%;
+    backdrop-filter: brightness(40%);
+    flex-direction: column;
+    display: flex;
+    gap: 5px;
+    z-index: 11140%1;
+    font-size: 13px;
+  }
+  input {
+    background: rgba(225,225,225,0.3);
+    height: 36px;
+    border-radius: 20px;
+    padding: 0px 10px;
+    border: none;
+    margin-bottom: 20px;
+    color: white;
+    align-self: left;
+    margin-right: 73px;
+  }
+  button {
+    background: rgb(45, 126, 231);
+    height: 40px;
+    line-height: 40px;
+    border-radius: 40px;
+    margin: 10px 0px;
+    margin-right: 73px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    color: white;
+  }
+}
