--- a/main.css
+++ b/main.css
@@ -376,6 +376,7 @@ button {
     color: white;
     align-self: left;
     margin-right: 73px;
+    margin-left: -15px;
   }
   button {
     background: rgb(45, 126, 231);
@@ -384,6 +385,7 @@ button {
     border-radius: 40px;
     margin: 10px 0px;
     margin-right: 73px;
+    margin-left: -15px;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
     color: white;
   }
