--- a/main.css
+++ b/main.css
@@ -150,16 +150,18 @@ footer {
   padding: 10px;
   text-align: center;
 }
+
 .login {
   max-width: 100%;
   height: 500px;
   color: white;
   border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
   z-index: 1111;
   overflow: hidden;
   margin-top: 100px;
 }
+
 form {
   border-radius: 20px;
   display: block;
@@ -173,8 +175,9 @@ form {
   gap: 5px;
   z-index: 1111;
 }
+
 input {
-  background: rgba(225,225,225,0.3);
+  background: rgba(225, 225, 225, 0.3);
   height: 40px;
   border-radius: 20px;
   padding: 0px 20px;
@@ -182,16 +185,17 @@ input {
   margin-bottom: 20px;
   color: white;
 }
+
 button {
   background: rgb(45, 126, 231);
   height: 40px;
   line-height: 40px;
   border-radius: 40px;
   margin: 10px 0px;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   color: white;
 }
-   
+
 /* responsive styles */
 
 @media screen and (max-width: 1400px) {
@@ -274,6 +278,7 @@ button {
     position: absolute;
     top: 0;
   }
+
   header {
     header {
       background-color: #F63232;
@@ -285,7 +290,7 @@ button {
       left: 0;
       z-index: 1;
     }
-    
+
     header h1 {
       color: white;
       border: 8px solid white;
@@ -294,16 +299,18 @@ button {
       border-radius: 36px;
     }
   }
+
   .login {
     max-width: 80%;
     height: 450px;
     color: white;
     border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
     z-index: 1111;
     overflow: hidden;
     margin-top: 100px;
   }
+
   form {
     border-radius: 20px;
     display: block;
@@ -318,8 +325,9 @@ button {
     z-index: 11140%1;
     font-size: 15px;
   }
+
   input {
-    background: rgba(225,225,225,0.3);
+    background: rgba(225, 225, 225, 0.3);
     height: 36px;
     border-radius: 20px;
     padding: 0px 10px;
@@ -329,6 +337,7 @@ button {
     align-self: left;
     margin-right: 50px;
   }
+
   button {
     background: rgb(45, 126, 231);
     height: 40px;
@@ -336,22 +345,24 @@ button {
     border-radius: 40px;
     margin: 10px 0px;
     margin-right: 50px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     color: white;
   }
 }
+
 @media screen and (max-width: 430px) {
- 
+
   .login {
     max-width: 80%;
     height: 450px;
     color: white;
     border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
     z-index: 1111;
     overflow: hidden;
     margin-top: 100px;
   }
+
   form {
     border-radius: 20px;
     display: block;
@@ -366,8 +377,9 @@ button {
     z-index: 11140%1;
     font-size: 13px;
   }
+
   input {
-    background: rgba(225,225,225,0.3);
+    background: rgba(225, 225, 225, 0.3);
     height: 36px;
     border-radius: 20px;
     padding: 0px 10px;
@@ -378,6 +390,7 @@ button {
     margin-right: 73px;
     margin-left: -15px;
   }
+
   button {
     background: rgb(45, 126, 231);
     height: 40px;
@@ -386,7 +399,7 @@ button {
     margin: 10px 0px;
     margin-right: 73px;
     margin-left: -15px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     color: white;
   }
 }
