--- a/main.css
+++ b/main.css
@@ -194,8 +194,15 @@ button {
   margin: 10px 0px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   color: white;
+  transform: scale(1);
 }
-
+.checkbox {
+  display: flex;
+  align-items: center;
+}
+span {
+  padding-right: 10px;
+}
 /* responsive styles */
 
 @media screen and (max-width: 1400px) {
