--- a/main.css
+++ b/main.css
@@ -150,16 +150,25 @@ footer {
   padding: 10px;
   text-align: center;
 }
-
-.login {
+.signup {
   max-width: 100%;
-  height: 500px;
+  height: 700px;
   color: white;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
-  z-index: 1111;
+  /* z-index: 1111; */
   overflow: hidden;
-  margin-top: 100px;
+  margin-top: 130px;
+}
+.login {
+  max-width: 100%;
+  height: 535px;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
+  /* z-index: 1111; */
+  overflow: hidden;
+  margin-top: 130px;
 }
 
 form {
@@ -178,7 +187,7 @@ form {
 
 input {
   background: rgba(225, 225, 225, 0.3);
-  height: 40px;
+  height: 70px;
   border-radius: 20px;
   padding: 0px 20px;
   border: none;
@@ -307,6 +316,16 @@ span {
     }
   }
 
+  .signup {
+    max-width: 80%;
+    height: 450px;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
+    z-index: 1111;
+    overflow: hidden;
+    margin-top: 120px;
+  }
   .login {
     max-width: 80%;
     height: 450px;
@@ -315,7 +334,7 @@ span {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
     z-index: 1111;
     overflow: hidden;
-    margin-top: 100px;
+    margin-top: 120px;
   }
 
   form {
@@ -359,6 +378,16 @@ span {
 
 @media screen and (max-width: 430px) {
 
+  .signup {
+    max-width: 80%;
+    height: 620px;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
+    z-index: 1111;
+    overflow: hidden;
+    margin-top: 100px;
+  }
   .login {
     max-width: 80%;
     height: 500px;
@@ -367,7 +396,7 @@ span {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
     z-index: 1111;
     overflow: hidden;
-    margin-top: 100px;
+    margin-top: 120px;
   }
 
   form {
